# binius64

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  prek.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml
crates/arith-bench/benches/: field_mul.rs
crates/arith-bench/src/: test_utils.rs  underlier.rs
crates/circuits/: Cargo.toml
crates/circuits/src/: concat.rs  fixed_byte_vec.rs  jwt_claims.rs  lib.rs  multiplexer.rs  rs256.rs  slice.rs  util.rs
crates/compute/: Cargo.toml
crates/compute/src/: buffer_pool.rs  lib.rs
crates/core/src/: constraint_system.rs  consts.rs  error.rs  lib.rs  verify.rs  word.rs
crates/core/test_data/: README.md
crates/examples/: Cargo.toml
crates/examples/examples/: bip32.rs
crates/examples/src/: cli.rs  (+1 more)
crates/field/: Cargo.toml
crates/field/benches/: binary_field.rs  ghash_widening.rs  packed_field_element_access.rs  packed_field_invert.rs  packed_field_multiply.rs  packed_field_square.rs
crates/field/src/: aes_field.rs  arithmetic_traits.rs  binary_field.rs  binary_field_arithmetic.rs  field.rs  ghash.rs  ghash_sq.rs  lib.rs  linear_transformation.rs  packed.rs  packed_aes.rs  packed_binary_field.rs  packed_ghash.rs  packed_ghash_sq.rs  sliced_packed_field.rs  tests.rs  util.rs
crates/field/src/arch/: mod.rs  strategies.rs
crates/field/src/arch/aarch64/: m128.rs  mod.rs  packed_128.rs  packed_aes_128.rs  packed_ghash_128.rs  simd_arithmetic.rs
crates/field/src/arch/aarch64/arithmetic/: ghash.rs
crates/field/src/arch/portable/: m128.rs  m256.rs  mod.rs  packed.rs  packed_1.rs  packed_128.rs  packed_16.rs  packed_2.rs  packed_256.rs  packed_32.rs  packed_4.rs  packed_512.rs  packed_64.rs  packed_8.rs  packed_aes_128.rs  packed_aes_16.rs  packed_aes_256.rs  packed_aes_32.rs  packed_aes_512.rs  packed_aes_64.rs  packed_aes_8.rs  packed_arithmetic.rs  packed_ghash_128.rs  packed_ghash_256.rs  packed_ghash_512.rs  packed_ghash_sq_256.rs  packed_macros.rs  pairwise_arithmetic.rs  pairwise_table_arithmetic.rs  scaled_arithmetic.rs  univariate_mul_utils_128.rs
crates/field/src/arch/portable/arithmetic/: ghash.rs  ghash_sq.rs  mod.rs
crates/field/src/arch/shared/: ghash.rs
crates/field/src/arch/wasm32/: m128.rs  packed_ghash_128.rs
crates/field/src/arch/x86_64/: m128.rs  m256.rs  m512.rs  mod.rs  packed_128.rs  packed_256.rs  packed_512.rs  packed_aes_128.rs  packed_aes_256.rs  packed_aes_512.rs  packed_ghash_128.rs  packed_ghash_256.rs  packed_ghash_512.rs  packed_ghash_sq_256.rs
crates/field/src/arch/x86_64/arithmetic/: ghash.rs  ghash_sq.rs  mod.rs
crates/field/src/underlier/: divisible.rs  mod.rs  scaled.rs  sliced.rs  small_uint.rs  underlier_impls.rs  underlier_type.rs  underlier_with_bit_ops.rs
crates/frontend/: Cargo.toml
crates/hash/: Cargo.toml
crates/m4/: Cargo.toml
crates/m4-prover/: Cargo.toml
crates/m4-prover/benches/: blake3_compressions.rs  blake3_flock_apples.rs  keccak_witness_gen.rs
crates/m4-prover/benches/utils/: m4_bench.rs
crates/m4-prover/src/: bitand.rs  crc64.rs  lib.rs  operand_witness.rs  prove.rs  reduction.rs  shift.rs  test_utils.rs  value_table.rs  value_table2.rs
crates/m4-prover/tests/: prove_hash_primitives.rs
crates/m4-verifier/: Cargo.toml
crates/m4-verifier/src/: bitand.rs  commit.rs  lib.rs  public_words.rs  reduction.rs  shift.rs  verify.rs
crates/m4/src/: lib.rs  value_table.rs
crates/math/: Cargo.toml
crates/prover/: Cargo.toml
tools/: clippy-changed-packages.sh
(+343 files in other folders)
