[package]
name = "binius-m4"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-core = { path = "../core" }
binius-frontend = { path = "../frontend" }
binius-utils = { path = "../utils" }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["rayon"]
rayon = ["binius-utils/rayon"]
